Наброски загрузчика, работа над структурой модулей и общей архитектурой

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -80,5 +80,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="ПОМЕТКИ.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
