--- a/MUDULE__DRIVER_CONNECTOR/MUDULE__DRIVER_CONNECTOR.vcxproj
+++ b/MUDULE__DRIVER_CONNECTOR/MUDULE__DRIVER_CONNECTOR.vcxproj
@@ -79,16 +79,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\..\Output</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\..\Output\Modules\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <OutDir>$(SolutionDir)$(Configuration)\..\Output</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\..\Output\Modules\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutDir>$(SolutionDir)$(Configuration)\..\Output</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\..\Output\Modules\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <OutDir>$(SolutionDir)$(Configuration)\..\Output</OutDir>
+    <OutDir>$(SolutionDir)$(Configuration)\..\Output\Modules\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
