--- a/MODULE_SCAN/MODULE__SCANNER_SERVICE.csproj
+++ b/MODULE_SCAN/MODULE__SCANNER_SERVICE.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{397064D3-DE16-44C4-82DE-7C55E3E1CA8E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MODULE_SCAN</RootNamespace>
-    <AssemblyName>MODULE_SCAN</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RootNamespace>MODULE__SCAN</RootNamespace>
+    <AssemblyName>MODULE__SCAN</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
