Работа над сервисом скана Небольшие правки в взаимодействии модулей

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="Kernel.cs" />
     <Compile Include="Kernel_MODULES\Configuration.cs" />
+    <Compile Include="Kernel_MODULES\Connector.cs" />
     <Compile Include="Kernel_MODULES\FoundVirusesManager.cs" />
     <Compile Include="Kernel_MODULES\ModuleManager.cs" />
     <Compile Include="Kernel_MODULES\Quarantine.cs" />
