--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Kernel.cs" />
+    <Compile Include="Kernel_MODULES\API.cs" />
     <Compile Include="Kernel_MODULES\Configuration.cs" />
     <Compile Include="Kernel_MODULES\Connector.cs" />
     <Compile Include="Kernel_MODULES\ModuleManager.cs" />
