--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -93,6 +93,12 @@
   <ItemGroup>
     <Content Include="ПОМЕТКИ.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\LoggerLib\LoggerLib.csproj">
+      <Project>{703b493a-a924-4dd6-96f8-aef411e5667c}</Project>
+      <Name>LoggerLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
