Много мелких исправлений

--- a/GUI/GUI/GUI.csproj
+++ b/GUI/GUI/GUI.csproj
@@ -198,7 +198,9 @@
     <None Include="Resources\search 96.png" />
     <None Include="Resources\search.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\About_icon-icons.com_55974.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Antivirus_Core\API_Client_Library\API_Client_Library.csproj">
       <Project>{0bab3d40-59eb-46f0-8a82-b90b1df1f593}</Project>
