Работа над ПЗ и криптографом Удалены ненужные файлы имитатора API клиента

--- a/DB_Editor/DB_Editor.csproj
+++ b/DB_Editor/DB_Editor.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -109,6 +110,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\file_89266.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\openfolderwithfile_122800.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
