--- a/GUI/GUI/packages.config
+++ b/GUI/GUI/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BlowFish" version="1.0.2" targetFramework="net472" />
   <package id="MahApps.Metro.IconPacks" version="4.8.0" targetFramework="net472" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net472" />
   <package id="Tulpep.NotificationWindow" version="1.1.38" targetFramework="net472" />
